@@ -1,6 +1,7 @@
 h1. CHANGELOG
 h2. 1.1.4 February 21, 2012
 
+* fix 'email_spec' configuration in 'rspec' recipe
 * fix typo for machinist in 'rspec' recipe
 
 h2. 1.1.3 February 21, 2012
